Add description to components doc

--- a/data/docs/2-components.mdx
+++ b/data/docs/2-components.mdx
@@ -1,9 +1,8 @@
 ---
 title: Components & syntax
+description: Custom components you can use in MDX pages.
 category: usage
 ---
-
-The following components are available out of the box for use in MDX pages:
 
 ## Alerts
 
