--- a/data/docs/1-basic-usage.mdx
+++ b/data/docs/1-basic-usage.mdx
@@ -10,6 +10,7 @@ Pages in this docs site are located in the `data/` directory. Each page is an `.
 Each page has some frontmatter metadata at the top, which includes information about the page. The following properties can be included:
 
 - `title` - The title of the page. **Docs without a title will never be shown in the sidebar or search.**
+- `description` - A short description of the page, which will appear below the title.
 - `category` - Optional ID of the category this page belongs to. If not defined, the page is uncategorized. [More info](/docs/categories)
 - `showTitle` - Whether or not to show the page's title at its top. By default it's `true`.
 - `showToc` - Whether or not to show the page's table of contents on the side. By default it's `true`.
