--- a/data/docs/5-customization.mdx
+++ b/data/docs/5-customization.mdx
@@ -1,5 +1,6 @@
 ---
 title: Customization
+description: Configure this docs site, and make it your own.
 category: usage
 ---
 
@@ -14,4 +15,4 @@ The `config.json` file in the `data/` directory defines various site-wide proper
   { href: string, label: string, type: string }
   ```
   In this example site the only type is `github`, but you can add additional types in `@/components/layout/nav/links.tsx`.
-- `categories` - An object where keys are category IDs and values are display names, as described in the [categories page](/docs/categories).
+- `categories` - An object where keys are category IDs and values are display names, as described in the [organization page](/docs/organization#categories).
