Rename `data` docs dir to `content`

--- a/content/docs/1-getting-started.mdx
+++ b/content/docs/1-getting-started.mdx
@@ -82,7 +82,7 @@ Use the `dev` script to run this project in development mode:
 
 ### Start editing docs
 
-You're now ready to go! Start creating docs in the project's `data` directory, and write content using markdown and MDX.
+You're now ready to go! Start creating docs in the project's `content` directory, and write content using markdown and MDX.
 
 Next, you can learn how to [add metadata](/docs/page-meta) to your pages, [organize them](/docs/organization) or [use MDX components](/docs/components).
 
