--- a/content/docs/2-page-meta.mdx
+++ b/content/docs/2-page-meta.mdx
@@ -24,4 +24,4 @@ category: getting-started
 ---
 ```
 
-More example pages can be found in the `data/sample/` directory of this site.
+More example pages can be found in the `content/sample/` directory of this site.
