Update wording in getting started build section

--- a/content/docs/1-getting-started.mdx
+++ b/content/docs/1-getting-started.mdx
@@ -88,9 +88,9 @@ Next, you can learn how to [add metadata](/docs/page-meta) to your pages, [organ
 
 </Steps>
 
-## Build your site
+## Build for production
 
-Once you're done writing content, you can build your site and host it wherever you want.
+Once you're done writing content, you can make a production build of your site and host it wherever you want.
 
 <Steps>
 ### Optional: Choose build output
