--- a/content/docs/5-customization.mdx
+++ b/content/docs/5-customization.mdx
@@ -8,7 +8,7 @@ category: usage
 
 The `config.json` file in the `content` directory defines various site-wide properties:
 
-- `title` - Site title, appearing by default as the home page's `<title>`, as well as in the Nav's header.
+- `title` - Site title, appearing by default as the home page's `<title>`, as well as in the header logo.
 - `titleTemplate` - Template for the `<title>` of pages.
 - `links` - An array of links that will appear in the navbar, such as your git repo or social media. Each object in the array must be in the structure of:
   ```ts
