--- a/content/sample/2-mdx-test.mdx
+++ b/content/sample/2-mdx-test.mdx
@@ -15,7 +15,7 @@ export const Counter = () => {
       </div>
       <button
         onClick={() => setCount(prev => prev + 1)}
-        className='inline-flex h-10 items-center justify-center whitespace-nowrap rounded-md border px-4 text-sm font-medium shadow-sm shadow-neutral-950/10 ring-offset-background transition-[background-color,opacity] bg-mix-background mix-with-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 active:duration-0 active:mix-amount-20 disabled:pointer-events-none disabled:opacity-50 dark:bg-mix-neutral-800 hover:[&:not(:active):not(:disabled)]:mix-amount-10 [&:not(a)]:cursor-default [&>*]:z-10 [&>svg]:shrink-0 [&>svg]:text-base'
+        className='inline-flex h-10 items-center justify-center whitespace-nowrap rounded-md border px-4 text-sm font-medium shadow-sm ring-offset-background transition-[background-color,opacity] bg-mix-background mix-with-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 active:duration-0 active:mix-amount-20 disabled:pointer-events-none disabled:opacity-50 dark:bg-mix-neutral-800 hover:[&:not(:active):not(:disabled)]:mix-amount-10 [&:not(a)]:cursor-default [&>*]:z-10 [&>svg]:shrink-0 [&>svg]:text-base'
       >
         Increment
       </button>
@@ -40,7 +40,7 @@ const Counter = () => {
       </div>
       <button
         onClick={() => setCount(prev => prev + 1)}
-        className='inline-flex h-10 items-center justify-center whitespace-nowrap rounded-md border px-4 text-sm font-medium shadow-sm shadow-neutral-950/10 ring-offset-background transition-[background-color,opacity] bg-mix-background mix-with-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 active:duration-0 active:mix-amount-20 disabled:pointer-events-none disabled:opacity-50 dark:bg-mix-neutral-800 hover:[&:not(:active):not(:disabled)]:mix-amount-10 [&:not(a)]:cursor-default [&>*]:z-10 [&>svg]:shrink-0 [&>svg]:text-base'
+        className='inline-flex h-10 items-center justify-center whitespace-nowrap rounded-md border px-4 text-sm font-medium shadow-sm ring-offset-background transition-[background-color,opacity] bg-mix-background mix-with-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 active:duration-0 active:mix-amount-20 disabled:pointer-events-none disabled:opacity-50 dark:bg-mix-neutral-800 hover:[&:not(:active):not(:disabled)]:mix-amount-10 [&:not(a)]:cursor-default [&>*]:z-10 [&>svg]:shrink-0 [&>svg]:text-base'
       >
         Increment
       </button>
