--- a/content/sample/3-nesting-test/index.mdx
+++ b/content/sample/3-nesting-test/index.mdx
@@ -3,6 +3,7 @@ title: Nesting test
 category: sample
 showTitle: false
 showToc: false
+showPagination: false
 ---
 
 <h1 className='text-center text-6xl font-extrabold tracking-tight sm:text-8xl'>
