Add `showPagination` doc prop to page meta doc

--- a/content/docs/2-page-meta.mdx
+++ b/content/docs/2-page-meta.mdx
@@ -11,8 +11,9 @@ Each page can have some frontmatter metadata at the top, which includes informat
 - `category` - Optional ID of the category this page belongs to. If not defined, the page is uncategorized. [More info](/docs/organization#categories)
 - `showTitle` - Whether or not to show the page's title and description at its top. By default it's `true`.
 - `showToc` - Whether or not to show the page's table of contents on the side. By default it's `true`.
+- `showPagination` - Whether or not to show the next and previous page buttons at the bottom of the page. By default it's `true`.
 - `showSidebar` - Whether or not to show the sidebar when this page is viewed. By default it's `true`.
-- `includeInSidebar` - Whether or not to include this page as an item in the sidebar. By default it's `true`.
+- `includeInSidebar` - Whether or not to include this page as an item in the sidebar and search. By default it's `true`.
 
 ### Example page metadata
 
