--- a/content/sample/3-nesting-test/nested1.mdx
+++ b/content/sample/3-nesting-test/nested1.mdx
@@ -3,7 +3,7 @@ title: Nested Page 1
 showToc: false
 ---
 
-<div className='rounded-lg bg-primary text-center text-9xl font-bold text-primary-foreground [&>*]:m-0'>
+<div className='rounded-lg bg-primary text-center text-9xl font-bold text-primary-foreground *:m-0'>
   1
 </div>
 
