--- a/content/sample/3-nesting-test/nested3.mdx
+++ b/content/sample/3-nesting-test/nested3.mdx
@@ -3,7 +3,7 @@ title: Nested Page 3
 showToc: false
 ---
 
-<div className='rounded-lg bg-neutral text-center text-9xl font-bold text-neutral-foreground [&>*]:m-0'>
+<div className='rounded-lg bg-neutral text-center text-9xl font-bold text-neutral-foreground *:m-0'>
   3
 </div>
 
