--- a/content/sample/2-mdx-test.mdx
+++ b/content/sample/2-mdx-test.mdx
@@ -6,7 +6,7 @@ category: sample
 import { useState } from 'react';
 
 export const Counter = () => {
-  const [count, setCount] = useState(0)
+  const [count, setCount] = useState(0);
 
   return (
     <div className='flex w-full flex-col items-center gap-2'>
