--- a/content/sample/2-mdx-test.mdx
+++ b/content/sample/2-mdx-test.mdx
@@ -15,7 +15,7 @@ export const Counter = () => {
       </div>
       <button
         onClick={() => setCount(prev => prev + 1)}
-        className='shadow-xs ring-offset-background bg-mix-background mix-with-muted-foreground focus-visible:outline-hidden focus-visible:ring-ring active:mix-amount-20% dark:bg-mix-neutral-800 hover:not-active:not-disabled:mix-amount-10% inline-flex h-10 items-center justify-center whitespace-nowrap rounded-md border px-4 text-sm font-medium transition-[background-color,opacity] *:z-10 focus-visible:ring-2 focus-visible:ring-offset-2 active:duration-0 disabled:pointer-events-none disabled:opacity-50 [&:not(a)]:cursor-default [&>svg]:shrink-0 [&>svg]:text-base'
+        className='shadow-xs ring-offset-background bg-mix-background mix-with-muted-foreground focus-visible:outline-hidden focus-visible:ring-ring active:mix-amount-20% dark:bg-mix-neutral-800 hover:not-active:not-disabled:mix-amount-10% inline-flex h-10 items-center justify-center whitespace-nowrap rounded-md border px-4 text-sm font-medium transition-[background-color,opacity] *:z-10 focus-visible:ring-2 focus-visible:ring-offset-2 active:duration-0 disabled:pointer-events-none disabled:opacity-50 [&>svg]:shrink-0 [&>svg]:text-base'
       >
         Increment
       </button>
@@ -40,7 +40,7 @@ const Counter = () => {
       </div>
       <button
         onClick={() => setCount(prev => prev + 1)}
-        className='shadow-xs ring-offset-background bg-mix-background mix-with-muted-foreground focus-visible:outline-hidden focus-visible:ring-ring active:mix-amount-20% dark:bg-mix-neutral-800 hover:not-active:not-disabled:mix-amount-10% inline-flex h-10 items-center justify-center whitespace-nowrap rounded-md border px-4 text-sm font-medium transition-[background-color,opacity] *:z-10 focus-visible:ring-2 focus-visible:ring-offset-2 active:duration-0 disabled:pointer-events-none disabled:opacity-50 [&:not(a)]:cursor-default [&>svg]:shrink-0 [&>svg]:text-base'
+        className='shadow-xs ring-offset-background bg-mix-background mix-with-muted-foreground focus-visible:outline-hidden focus-visible:ring-ring active:mix-amount-20% dark:bg-mix-neutral-800 hover:not-active:not-disabled:mix-amount-10% inline-flex h-10 items-center justify-center whitespace-nowrap rounded-md border px-4 text-sm font-medium transition-[background-color,opacity] *:z-10 focus-visible:ring-2 focus-visible:ring-offset-2 active:duration-0 disabled:pointer-events-none disabled:opacity-50 [&>svg]:shrink-0 [&>svg]:text-base'
       >
         Increment
       </button>
